# bird

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  RELEASING.md  cliff.toml  config.example.toml  deny.toml
.githooks/: pre-push
.github/rulesets/: protect-dev.json  protect-main.json
.github/workflows/: ci.yml  finalize-release.yml  guard-main-docs.yml  release.yml
completions/: bird.bash  bird.elvish  bird.fish  bird.powershell  bird.zsh
docs/: CLI_DESIGN.md  DEVELOPER.md  SECRETS.md
docs/brainstorms/: 2026-02-11-research-commands-and-caching-brainstorm.md  2026-02-17-entity-store-cache-redesign-brainstorm.md  2026-03-12-wrap-xurl-vs-native-api-client.md  2026-03-16-distribution-dx-completions-brainstorm.md  2026-03-16-ga-release-readiness-brainstorm.md  2026-04-03-xurl-crate-import-migration-requirements.md
docs/plans/: 2026-02-11-feat-profile-thread-commands-plan.md  2026-02-11-feat-search-command-plan.md  2026-02-11-feat-transparent-cache-layer-plan.md  2026-02-11-feat-watchlist-usage-commands-plan.md  2026-02-12-chore-watchlist-usage-deferred-items.md  2026-02-17-chore-repo-infra-main-branch-setup-plan.md  2026-02-17-feat-openapi-type-foundation-plan.md  2026-02-17-refactor-cache-auth-layer-unification-plan.md  2026-02-17-refactor-entity-store-cache-replacement-plan.md  2026-02-17-test-live-production-validation-plan.md  2026-02-19-test-automated-live-entity-store-integration-plan.md  2026-03-12-001-refactor-xurl-transport-layer-plan.md  2026-03-12-002-fix-xurl-transport-review-findings-plan.md  2026-03-13-001-refactor-align-terminology-with-xurl-plan.md  2026-03-16-000-meta-implementation-schedule.md  2026-03-16-001-feat-shell-completions-plan.md  2026-03-16-002-feat-quiet-flag-agentic-polish-plan.md  2026-03-16-003-feat-distribution-homebrew-crates-plan.md  2026-03-16-004-refactor-ga-release-readiness-plan.md  2026-03-19-001-chore-consolidate-ci-tokens-plan.md  2026-03-26-001-feat-usage-api-first-default-plan.md
docs/reviews/: 2026-03-12-xurl-transport-review.md
docs/solutions/architecture-patterns/: changelog-as-committed-artifact-20260319.md  code-review-round2-quality-improvements.md  crates-io-distribution-readiness.md  github-pat-consolidation-across-repos-20260319.md  live-integration-testing-cli-external-api.md  quiet-flag-diagnostic-suppression-pattern.md  release-pipeline-cross-platform-publish.md  search-command-paginated-api-pattern.md  shell-completions-main-dependency-gating.md  thread-command-tree-reconstruction-pattern.md  xurl-subprocess-transport-layer.md
docs/solutions/build-errors/: ci-formatting-drift-rust-edition-2024.md
docs/solutions/performance-issues/: sqlite-cache-layer-api-cost-reduction.md
docs/solutions/security-issues/: rust-cli-security-code-quality-audit.md
scripts/: download-openapi.sh  generate-types.sh
src/: auth.rs  bookmarks.rs  cache.rs  cli.rs  config.rs  cost.rs  doctor.rs  fields.rs  login.rs  main.rs  output.rs  profile.rs  raw.rs  requirements.rs  schema.rs  search.rs  thread.rs  transport.rs  usage.rs  watchlist.rs
src/cache/: db.rs  mod.rs  usage.rs
src/db/: client.rs  db.rs  mod.rs  usage.rs
src/types/: generated.rs  mod.rs
tests/: cli_smoke.rs  live_integration.rs  transport_integration.rs
