[package]
name = "bird"
version = "0.1.0"
edition = "2021"
description = "X API CLI with OAuth2 login and schema-driven raw endpoint access"
license = "MIT"
repository = "https://github.com/brettdavies/bird"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
url = "2.5"
owo-colors = { version = "4", features = ["supports-color"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
toml_edit = "0.22"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["now"] }
which = "7"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
