[package]
name = "bird"
version = "0.1.0"
edition = "2024"
description = "X API CLI with entity caching, search, threads, and watchlists"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brettdavies/bird"
homepage = "https://github.com/brettdavies/bird"
documentation = "https://docs.rs/bird"
keywords = ["twitter", "x", "api", "cli", "oauth"]
categories = ["command-line-utilities", "web-programming::http-client"]
authors = ["Brett Davies <pm8fp22mbg@privaterelay.appleid.com>"]
readme = "README.md"
rust-version = "1.87"
exclude = [
    ".claude/",
    ".github/",
    ".githooks/",
    "cliff.toml",
    "docs/",
    "openapi/",
    "rustfmt.toml",
    "scripts/",
    "tests/",
    "todos/",
]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
url = "2.5"
owo-colors = { version = "4", features = ["supports-color"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
toml_edit = "0.22"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["now"] }
which = "7"
libc = "0.2"
semver = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/bird-{ target }.tar.gz"
pkg-fmt = "tgz"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
